frontend/test/should_fail/cast_node_object.grg
using cast_model;

rule r {
	n:N;
	
	modify {
	---
		eval {
			def ref o:O = (O)n;
		}
	}
}
